--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -13,16 +13,16 @@ env:
 
 jobs:
   test:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-    - name: Setup Python
+    - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: 3.10
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
